--- a/IOMDOProject/pom.xml
+++ b/IOMDOProject/pom.xml
@@ -46,7 +46,7 @@
 				<artifactId>javafx-maven-plugin</artifactId>
 				<version>0.0.5</version>
 				<configuration>
-					<mainClass>bachelorthesis.IOMDOProject.App</mainClass>
+					<mainClass>bachelorthesis.IOMDOProject.Main</mainClass>
 				</configuration>
 			</plugin>
 		</plugins>
