Added internationalization for Homescreen

--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang.properties
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang.properties
@@ -1,7 +1,14 @@
 
-btn.logIn = Anmelden
+btn.createQuery      = Abfrage erstellen
+btn.expandOntology   = Ontologie erweitern
+btn.logIn            = Anmelden
+btn.logout           = abmelden
+btn.newProtocol      = Protokoll erfassen
+btn.protocolOverview = Protokoll anschauen
+btn.settings         = Einstellungen
 
-lbl.password = Passwort
+lbl.loggedInAs = Eingeloggt als
+lbl.password   = Passwort
 
 my.goodbye  = Bye (default)
 my.hello    = Hello (default)
