--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang.properties
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang.properties
@@ -7,8 +7,20 @@ btn.newProtocol      = Protokoll erfassen
 btn.protocolOverview = Protokoll anschauen
 btn.settings         = Einstellungen
 
-lbl.loggedInAs = Eingeloggt als
-lbl.password   = Passwort
+lbl.FID           = FID
+lbl.ISISDevice    = ISIS-Ger\u00E4t
+lbl.PID           = PID
+lbl.assistant     = Assistent
+lbl.dateOfBirth   = Geburtsdatum
+lbl.dateOfSurgery = Operationsdatum
+lbl.diagnosis     = Diagnose
+lbl.firstName     = Vorname
+lbl.loggedInAs    = Eingeloggt als
+lbl.nr            = Nr.
+lbl.password      = Passwort
+lbl.surgeon       = Operateur
+lbl.surgery       = Operation
+lbl.surname       = Nachname
 
 my.goodbye  = Bye (default)
 my.hello    = Hello (default)
