--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang.properties
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang.properties
@@ -1,10 +1,9 @@
 
+LogInError.wrongCredentials = Deine Anmeldedaten entsprechen keinem Konto in unserem System.
+
 btn.logIn = Anmelden
 
 lbl.password = Passwort
-
-my.goodbye  = Bye (default)
-my.hello    = Hello (default)
-my.question = Do you speak English? (default)
+lbl.username = Benutzername
 
 start.titel = IOMDO
