Neuer User hinzufügbar

--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang.properties
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang.properties
@@ -1,4 +1,5 @@
 
+btn.cancel           = Abbrechen
 btn.createQuery      = Abfrage erstellen
 btn.expandOntology   = Ontologie erweitern
 btn.logIn            = Anmelden
@@ -6,10 +7,19 @@ btn.logout           = abmelden
 btn.newProtocol      = Protokoll erfassen
 btn.protocolOverview = Protokoll anschauen
 btn.settings         = Einstellungen
+btn.signUp           = Regristrieren
 
+confirmationMsg.userCreated = Benutzer erfolgreich erstellt.
+
+errorMsg.emptyFileds      = Bitte alle Felder ausf\u00FCllen.
+errorMsg.usernameExists   = Benutzername existiert bereits.
+errorMsg.wrongCredentials = Deine Anmeldedaten entsprechen keinem Konto in unserem System.
+
+hl.createNewAccount = Neuer Benutzer
 
 lbl.FID           = FID
 lbl.ISISDevice    = ISIS-Ger\u00E4t
+lbl.LogIn         = Anmelden
 lbl.PID           = PID
 lbl.assistant     = Assistent
 lbl.dateOfBirth   = Geburtsdatum
@@ -19,19 +29,10 @@ lbl.firstName     = Vorname
 lbl.loggedInAs    = Eingeloggt als
 lbl.nr            = Nr.
 lbl.password      = Passwort
+lbl.signUp        = Regristrieren
 lbl.surgeon       = Operateur
 lbl.surgery       = Operation
 lbl.surname       = Nachname
-
-my.goodbye  = Bye (default)
-my.hello    = Hello (default)
-my.question = Do you speak English? (default)
-
-LogInError.wrongCredentials = Deine Anmeldedaten entsprechen keinem Konto in unserem System.
-lbl.password = Passwort
-lbl.username = Benutzername
-
-btn.logIn = Anmelden
-
+lbl.username      = Benutzername
 
 start.titel = IOMDO
