added internationalization for button "weiter"

--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang.properties
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang.properties
@@ -5,6 +5,7 @@ btn.expandOntology   = Ontologie erweitern
 btn.logIn            = Anmelden
 btn.logout           = abmelden
 btn.newProtocol      = Protokoll erfassen
+btn.next             = Weiter
 btn.protocolOverview = Protokoll anschauen
 btn.settings         = Einstellungen
 btn.signUp           = Regristrieren
