--- a/IOMDOProject/pom.xml
+++ b/IOMDOProject/pom.xml
@@ -28,6 +28,12 @@
 			<version>4.0.0</version>
 			<type>pom</type>
 		</dependency>
+		
+		<dependency>
+    <groupId>com.jfoenix</groupId>
+    <artifactId>jfoenix</artifactId>
+    <version>9.0.10</version>
+</dependency>
 
 	</dependencies>
 	<build>
