Protocol Overview, Properties Update

--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang.properties
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang.properties
@@ -25,9 +25,12 @@ lbl.LogIn         = Anmelden
 lbl.PID           = PID
 lbl.assistant     = Assistent
 lbl.caseNr        = Casenr.
+lbl.category      = Kategorie
+lbl.comment       = Kommentar
 lbl.dateOfBirth   = Geburtsdatum
 lbl.dateOfSurgery = Operationsdatum
 lbl.diagnosis     = Diagnose
+lbl.entry         = Eintrag
 lbl.firstName     = Vorname
 lbl.loggedInAs    = Eingeloggt als
 lbl.nr            = Nr.
@@ -37,6 +40,7 @@ lbl.signUp        = Regristrieren
 lbl.surgeon       = Operateur
 lbl.surgery       = Operation
 lbl.surname       = Nachname
+lbl.time          = Zeit
 lbl.username      = Benutzername
 
 start.titel = IOMDO
