Verbesserungen IOMDocumentionView, neue lang_properties

--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang.properties
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang.properties
@@ -35,6 +35,7 @@ lbl.firstName     = Vorname
 lbl.loggedInAs    = Eingeloggt als
 lbl.nr            = Nr.
 lbl.password      = Passwort
+lbl.patientData   = Patientendaten
 lbl.search        = Suche
 lbl.signUp        = Regristrieren
 lbl.surgeon       = Operateur
