Language, ProtocolOverviewController and RDPatDatController

--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang.properties
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang.properties
@@ -36,6 +36,7 @@ lbl.diagnosis     = Diagnose
 lbl.entry         = Eintrag
 lbl.firstName     = Vorname
 lbl.loggedInAs    = Eingeloggt als
+lbl.name          = Name
 lbl.nr            = Nr.
 lbl.password      = Passwort
 lbl.patientData   = Patientendaten
