IOM Recording update

--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang.properties
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang.properties
@@ -24,6 +24,7 @@ lbl.IOMrecording  = IOM Erfassung
 lbl.ISISDevice    = ISIS-Ger\u00E4t
 lbl.LogIn         = Anmelden
 lbl.PID           = PID
+lbl.age           = Alter
 lbl.assistant     = Assistent
 lbl.baselines     = Baselines
 lbl.caseData      = Falldaten
@@ -35,6 +36,7 @@ lbl.dateOfSurgery = Operationsdatum
 lbl.diagnosis     = Diagnose
 lbl.entry         = Eintrag
 lbl.firstName     = Vorname
+lbl.localization  = Lokalisation
 lbl.loggedInAs    = Eingeloggt als
 lbl.name          = Name
 lbl.nr            = Nr.
