Update EntryMap, new class OntologyEditor, Update IOMRecording

--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang.properties
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang.properties
@@ -51,4 +51,6 @@ lbl.surname       = Nachname
 lbl.time          = Zeit
 lbl.username      = Benutzername
 
+rec.measurement = Messung
+
 start.titel = IOMDO
