IOMO 30, new icons

--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang.properties
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang.properties
@@ -50,6 +50,7 @@ lbl.surgery       = Operation
 lbl.surname       = Nachname
 lbl.time          = Zeit
 lbl.username      = Benutzername
+lbl.value         = Wert
 
 rec.measurement = Messung
 
