--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang.properties
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang.properties
@@ -7,6 +7,7 @@ btn.logout           = abmelden
 btn.newProtocol      = Protokoll erfassen
 btn.next             = Weiter
 btn.protocolOverview = Protokoll anschauen
+btn.reset            = Reset
 btn.search           = Suchen
 btn.settings         = Einstellungen
 btn.signUp           = Regristrieren
