--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang.properties
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang.properties
@@ -1,6 +1,7 @@
 
 btn.cancel           = Abbrechen
 btn.createQuery      = Abfrage erstellen
+btn.executeQuery     = Ausf\u00FChren
 btn.expandOntology   = Ontologie erweitern
 btn.logIn            = Anmelden
 btn.logout           = abmelden
@@ -22,7 +23,7 @@ hl.createNewAccount = Neuer Benutzer
 
 lbl.FID           = FID
 lbl.IOMrecording  = IOM Erfassung
-lbl.ISISDevice    = ISIS-Ger\u00E4t
+lbl.ISISDevice    = Ger\u00E4t
 lbl.LogIn         = Anmelden
 lbl.PID           = PID
 lbl.age           = Alter
@@ -43,6 +44,8 @@ lbl.name          = Name
 lbl.nr            = Nr.
 lbl.password      = Passwort
 lbl.patientData   = Patientendaten
+lbl.query1        = Zeige alle Patienten, ihre Pathologie, ihr postoperativer Outcome und die jeweiligen DCS Messungen inklusive Muskeln
+lbl.query3        = Zeige alle Patienten, ihre Pathologie, ihr postoperativer Outcome und die tiefste Mapping-Schwelle
 lbl.save          = Speichern
 lbl.search        = Suche
 lbl.signUp        = Regristrieren
