Added postoperative Dispositions, patient can be partially saved

--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang.properties
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang.properties
@@ -42,7 +42,7 @@ lbl.localization  = Lokalisation
 lbl.loggedInAs    = Eingeloggt als
 lbl.name          = Name
 lbl.nr            = Nr.
-lbl.outcome       = Outcome
+lbl.outcome       = Postoperative Komplikation
 lbl.password      = Passwort
 lbl.patientData   = Patientendaten
 lbl.query1        = Zeige alle Patienten, ihre Pathologie, ihr postoperativer Outcome und die jeweiligen DCS Messungen inklusive Muskeln
