changed text of menu buttons

--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang.properties
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang.properties
@@ -2,16 +2,17 @@
 btn.cancel           = Abbrechen
 btn.createQuery      = Abfrage erstellen
 btn.executeQuery     = Ausf\u00FChren
-btn.expandOntology   = Ontologie erweitern
 btn.logIn            = Anmelden
 btn.logout           = abmelden
 btn.newProtocol      = Protokoll erfassen
 btn.next             = Weiter
+btn.ontologyOverview = Ontologie anschauen
 btn.protocolOverview = Protokoll anschauen
 btn.reset            = Reset
 btn.search           = Suchen
 btn.settings         = Einstellungen
 btn.signUp           = Regristrieren
+btn.userManual       = Benutzerhandbuch
 
 confirmationMsg.userCreated = Benutzer erfolgreich erstellt.
 
