settings and queries fixed

--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang.properties
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang.properties
@@ -22,41 +22,42 @@ errorMsg.wrongCredentials = Deine Anmeldedaten entsprechen keinem Konto in unser
 
 hl.createNewAccount = Neuer Benutzer
 
-lbl.FID           = FID
-lbl.IOMrecording  = IOM Erfassung
-lbl.ISISDevice    = Ger\u00E4t
-lbl.LogIn         = Anmelden
-lbl.PID           = PID
-lbl.age           = Alter
-lbl.assistant     = Assistent
-lbl.baselines     = Baselines
-lbl.caseData      = Falldaten
-lbl.caseNr        = Casenr.
-lbl.category      = Kategorie
-lbl.comment       = Kommentar
-lbl.dateOfBirth   = Geburtsdatum
-lbl.dateOfSurgery = Operationsdatum
-lbl.diagnosis     = Diagnose
-lbl.entry         = Subcategory
-lbl.firstName     = Vorname
-lbl.localization  = Lokalisation
-lbl.loggedInAs    = Eingeloggt als
-lbl.name          = Name
-lbl.nr            = Nr.
-lbl.outcome       = Postoperative Komplikation
-lbl.password      = Passwort
-lbl.patientData   = Patientendaten
-lbl.query1        = Zeige alle Patienten, ihre Pathologie, ihr postoperativer Outcome und die jeweiligen DCS Messungen inklusive Muskeln
-lbl.query3        = Zeige alle Patienten, ihre Pathologie, ihr postoperativer Outcome und die tiefste Mapping-Schwelle
-lbl.save          = Speichern
-lbl.search        = Suche
-lbl.signUp        = Regristrieren
-lbl.surgeon       = Operateur
-lbl.surgery       = Operation
-lbl.surname       = Nachname
-lbl.time          = Zeit
-lbl.username      = Benutzername
-lbl.value         = Wert
+lbl.FID            = FID
+lbl.IOMrecording   = IOM Erfassung
+lbl.ISISDevice     = Ger\u00E4t
+lbl.LogIn          = Anmelden
+lbl.PID            = PID
+lbl.age            = Alter
+lbl.assistant      = Assistent
+lbl.baselines      = Baselines
+lbl.caseData       = Falldaten
+lbl.caseNr         = Casenr.
+lbl.category       = Kategorie
+lbl.comment        = Kommentar
+lbl.createOwnQuery = Eine eigene Abfrage erstellen:
+lbl.dateOfBirth    = Geburtsdatum
+lbl.dateOfSurgery  = Operationsdatum
+lbl.diagnosis      = Diagnose
+lbl.entry          = Subcategory
+lbl.firstName      = Vorname
+lbl.localization   = Lokalisation
+lbl.loggedInAs     = Eingeloggt als
+lbl.name           = Name
+lbl.nr             = Nr.
+lbl.outcome        = Postoperative Komplikation
+lbl.password       = Passwort
+lbl.patientData    = Patientendaten
+lbl.query1         = Zeige alle Patienten, ihre Pathologie, ihr postoperativer Outcome und die jeweiligen DCS Messungen inklusive Muskeln
+lbl.query3         = Zeige alle Patienten, ihre Pathologie, ihr postoperativer Outcome und die tiefste Mapping-Schwelle
+lbl.save           = Speichern
+lbl.search         = Suche
+lbl.signUp         = Regristrieren
+lbl.surgeon        = Operateur
+lbl.surgery        = Operation
+lbl.surname        = Nachname
+lbl.time           = Zeit
+lbl.username       = Benutzername
+lbl.value          = Wert
 
 rec.measurement = Messung
 
