--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang.properties
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang.properties
@@ -7,6 +7,8 @@ btn.logout           = abmelden
 btn.newProtocol      = Protokoll erfassen
 btn.next             = Weiter
 btn.ontologyOverview = Ontologie anschauen
+btn.openOntology     = IOMD-Ontologie in Webprot\u00E9g\u00E9 \u00F6ffnen
+btn.openUserManual   = Benutzerhandbuch \u00F6ffnen
 btn.protocolOverview = Protokoll anschauen
 btn.reset            = Reset
 btn.search           = Suchen
