--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang.properties
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang.properties
@@ -16,6 +16,7 @@ btn.settings         = Einstellungen
 btn.signUp           = Regristrieren
 btn.userManual       = Benutzerhandbuch
 
+confirmationMsg.succsess    = Erfolgreich
 confirmationMsg.userCreated = Benutzer erfolgreich erstellt.
 
 errorMsg.emptyFileds      = Bitte alle Felder ausf\u00FCllen.
