spelling mistake correction

--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang.properties
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang.properties
@@ -55,7 +55,7 @@ lbl.query3         = Zeige alle Patienten, ihre Diagnose, ihr postoperativer Out
 lbl.queryResults   = Abfrage-Ergebnisse
 lbl.save           = Speichern
 lbl.search         = Suche
-lbl.signUp         = Regristrieren
+lbl.signUp         = Registrieren
 lbl.surgeon        = Operateur
 lbl.surgery        = Operation
 lbl.surname        = Nachname
@@ -66,3 +66,5 @@ lbl.value          = Wert
 rec.measurement = Messung
 
 start.titel = IOMDO
+
+text.noDisposition = Keine Komplikation
