--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang.properties
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang.properties
@@ -67,4 +67,7 @@ rec.measurement = Messung
 
 start.titel = IOMDO
 
+text.available     = Vorhanden
+text.bad           = Schlecht
+text.moderate      = M\u00E4ssig
 text.noDisposition = Keine Komplikation
